chore(ci): add package rule for GitHub Action updates

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,12 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["github>moonrise-labs/renovate-config"],
-  "packageRules": []
+  "packageRules": [
+    {
+      "automerge": true,
+      "extends": [":semanticCommitTypeAll(chore)"],
+      "groupName": "GitHub Actions",
+      "matchCategories": ["ci"]
+    }
+  ]
 }
